addons/toolbox/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: toolbox-server
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/instance: toolbox
    app.kubernetes.io/name: toolbox-server
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`KUSTOMIZED`)
      priority: 10
      services:
        - name: toolbox-server
          port: 8080
#  tls:
#    certResolver: default
